--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 		"tailwindcss": "^3.2.7",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"date-fns": "^2.29.3"
+	}
 }
