--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"deploy": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.13",
+		"gh-pages": "^5.0.0",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
